--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,31 +11,13 @@
 <body>
     <div class="container">
 
-        <h1>Linkly 🔗 URL Shortener</h1>
-
-        <!-- Shortener Section -->
-        <div class="card">
-            <h2>Generate Short URL</h2>
-            <input type="text" id="url-input" placeholder="Enter your long URL" />
-            <button onclick="generateShortURL()">Generate Short URL</button>
-
-            <div id="short-url-section" class="hidden">
-                <p>Short URL:</p>
-                <a id="short-url" target="_blank"></a>
-            </div>
+        <div id="generate_url">
+            <input id="url-input" type="text" placeholder="paste your url here">
+            <button onclick="generateShortURL()">generate short url</button>
         </div>
 
-        <!-- Analytics Section -->
-        <div class="card">
-            <h2>Get Analytics</h2>
-            <input type="text" id="short-url-input" placeholder="Enter your short URL generate by Linkly" />
-            <button onclick="getAnalytics()">Get Analytics</button>
-
-            <div id="analytics-section" class="hidden">
-                <h3>Analytics</h3>
-                <p>Total Clicks: <span id="total-clicks"></span></p>
-                <ul id="history"></ul>
-            </div>
+        <div id="show-url">
+            <!-- short url -->
         </div>
 
     </div>
